[package]
name = "jiffy"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bounded"
harness = false

[[bench]]
name = "unbounded"
harness = false

[dependencies]
crossbeam = "0.8.1"
flume = "0.10.12"
num_cpus = "1.13.1"
# loo = { path = "../looqueue-rs" }
# riffy = { git = "https://github.com/s1ck/riffy" }

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"
